--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Lambda School Newsfeed</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/index.css" />
+    <script async src="./Menu/Menu.js"></script>
+    <script async src="./Article/Article.js"></script>
   </head>
   <body>
     <div class="header">
@@ -12,8 +14,5 @@
     </div>
     <div class="articles"></div>
   </body>
-  <script src="./Menu/Menu.js"></script>
-  <script src="./Article/Article.js"></script>
-
 </html>
 <!-- Do not add anything to the HTML -->
